# Autonomus_Indoor_Drone

./: .gitignore  Jenkinsfile  README.md  launch_sim.sh
aid_webapp/: README.md  package-lock.json  package.json
aid_webapp/public/: index.html
aid_webapp/src/: App.vue  main.js
aid_webapp/src/components/: HelloWorld.vue  TabsManager.vue  commitChart.js  dmw1001_network.vue
aid_webapp/src/plugins/: vuetify.js
aid_webapp/src/ros_build/: roslib.js
ardrone_orb/: CMakeLists.txt  package.xml  settings.yaml
ardrone_orb/include/: linear_system.h
ardrone_orb/launch/: main.launch  orb.launch  orb_debug.launch
ardrone_orb/src/: ardrone_orb_adapter.cpp
ardrone_planner_utils/: CMakeLists.txt  package.xml
ardrone_planner_utils/include/kdtree/: kdtree.h  kdtree_utils.h
ardrone_planner_utils/launch/: ardrone_idsc.launch  ardrone_idsc_live.launch  ardrone_idsc_test.launch
ardrone_planner_utils/rviz/: main.rviz  master_config.rviz
ardrone_planner_utils/src/: collision_detection.cpp
ardrone_tutorials/: .gitignore  mainpage.dox  package.xml
ardrone_tutorials/launch/: joystick_controller.launchtemplate  keyboard_controller_outdoor.launch
ardrone_tutorials/src/: drone_controller.py  joystick_controller.py  keyboard_controller.py
ardupilotMavros/: CMakeLists.txt  package.xml
ardupilotMavros/launch/: apm.launch
astar/: CMakeLists.txt
astar/launch/: astar.launch
astar/src/: astar.py  main.py  random
beginner_tutorials/: CMakeLists.txt  package.xml
beginner_tutorials/cfg/: GUI.cfg
beginner_tutorials/scripts/: listener.py  talker.py  test_talker.py
beginner_tutorials/test/: test_beginner_tutorials.test
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/include/action_controller/: MultiDofFollowJointTrajectoryAction.h  MultiDofFollowJointTrajectoryActionFeedback.h  MultiDofFollowJointTrajectoryActionGoal.h  MultiDofFollowJointTrajectoryActionResult.h  MultiDofFollowJointTrajectoryFeedback.h  MultiDofFollowJointTrajectoryGoal.h  MultiDofFollowJointTrajectoryResult.h
devel/include/beginner_tutorials/: GUIConfig.h
devel/include/cvg_sim_gazebo_plugins/: SetBias.h  SetBiasRequest.h  SetBiasResponse.h
devel/include/cvg_sim_msgs/: Altimeter.h  Altitude.h  AttitudeCommand.h  Compass.h  ControllerState.h  HeadingCommand.h  HeightCommand.h  MotorCommand.h  MotorPWM.h  MotorStatus.h  PositionXYCommand.h  RC.h  RawImu.h  RawMagnetic.h  RawRC.h  RuddersCommand.h  ServoCommand.h  Supply.h  ThrustCommand.h  VelocityXYCommand.h  VelocityZCommand.h  YawrateCommand.h
devel/include/fyp/: droneGUIConfig.h
devel/include/localizer_dwm1001/: DWM1001_Tune_SerialConfig.h
devel/include/lsd_slam_core/: LSDDebugParamsConfig.h  LSDParamsConfig.h
devel/include/lsd_slam_viewer/: LSDSLAMViewerParamsConfig.h  keyframeGraphMsg.h  keyframeMsg.h
devel/include/move_quadcopter/: NavigateAction.h  NavigateActionFeedback.h  NavigateActionGoal.h  NavigateActionResult.h  NavigateFeedback.h  NavigateGoal.h  NavigateResult.h
devel/include/turtlesim_cleaner/: MoveCircle.h  MoveCircleRequest.h  MoveCircleResponse.h  MoveSquare.h  MoveSquareRequest.h  MoveSquareResponse.h
devel/lib/action_controller/: action_controller
devel/lib/joy/: joy_node
fyp/: CMakeLists.txt  package.xml
fyp/bash/: aid_launch.sh
fyp/cfg/: droneGUI.cfg
fyp/launch/: fyp.launch  test_code.test  test_fyp.test
fyp/model/: box.sdf  box_male.urdf  picking_box.xacro
fyp/msg/: Anchor.msg  Tag.msg
fyp/src/: aid_avoidance.txt  aid_batteryLevelRaspberryPi.py  aid_controller.py  aid_flightPath.py  aid_lastDroneData.py  aid_loadDwm1001InGazebo.py  aid_loadWaypointsInGazebo.py  aid_main.py  aid_mavros.py  aid_rvizMarkers.py  aid_status.py  aid_systemDefinitions.py  aid_takeoff.py  aid_test.py  aid_waypoints.py  drone_batteryLevelRaspberryPi.py  drone_controller.py  drone_flightPath.py  drone_loadWaypointsInGazebo.py  drone_main.py  drone_status.py  drone_systemDefinitions.py  drone_waypoints.py  lastDroneData.py  main.py  main1.py  oldcode  pid.py  position_functions.py  waypoints.xml
fyp/test/: test_ardrone_navdata.py  test_code.py
generate_map/: CMakeLists.txt  package.xml
generate_map/launch/: generate_map.launch
generate_map/src/: basic_controls.py
interactive_marker_tutorials/scripts/: basic_controls.py
jenkins/: 1_source.sh  2_catkin_make.sh  3_launch_dwm1001.sh  4_launch_joy.sh  5_launch_tum_simulator.sh
localizer_dwm1001/: CMakeLists.txt  README.md  package.xml
localizer_dwm1001/cfg/: DWM1001_Tune_Serial.cfg
localizer_dwm1001/launch/: dwm1001.launch
localizer_dwm1001/rviz/: dwm1001_network.rviz
localizer_dwm1001/scripts/: dwm1001_anchor.py  dwm1001_anchors.py  dwm1001_apiCommands.py  dwm1001_distance.py  dwm1001_main.py  dwm1001_network.py  dwm1001_serialPort.py  dwm1001_sys_defs.py  listener.py  unused_code.txt
localizer_dwm1001/src/: dwm1001_anchorService.py  dwm1001_apiCommands.py  dwm1001_displayMap.py  dwm1001_main.py  dwm1001_serialPort.py  dwm1001_systemDefinitions.py  unused code
localizer_dwm1001/test/: run_tests.sh  test_Anchor_0.py  test_Anchor_0_Publisher.py  test_Anchor_1.py  test_Anchor_1_Publisher.py  test_Anchor_2.py  test_Anchor_3.py  test_Tag.py
resources/: .AID_working_prototype.gif.icloud  FYP_Diagram.xml  FYP_Diagram_dev_board.xml
resources/claculations/: lap_calc.txt
rqt_mypkg/: package.xml
rqt_mypkg/scripts/: rqt_mypkg
src/ardrone_tutorials/: CMakeLists.txt  manifest.xml
src/ardrone_tutorials/launch/: joystick_controller.launch  keyboard_controller.launch  keyboard_controller_with_tags.launch
src/ardrone_tutorials/src/: drone_video_display.py
src/astar/: package.xml
src/drone_waypointer/: CMakeLists.txt  mainpage.dox  package.xml
src/drone_waypointer/include/drone_waypointer/: main_window.hpp  qnode.hpp
src/drone_waypointer/src/: main.cpp  main_window.cpp  path.txt  qnode.cpp
src/drone_waypointer/ui/: main_window.ui
src/fyp/: CMakeLists.txt
src/resources/: Overview.xml
src/rqt_mypkg/: plugin.xml
src/turtlesim_cleaner/: CMakeLists.txt  package.xml
utility/: launch_commands.sh
web_app/: package-lock.json
(+367 files in other folders)
