<?xml version="1.0"?>
<package>
  <name>ardrone_orb</name>
  <version>0.0.0</version>
  <description>The ardrone_orb package</description>
  <maintainer email="bapaden@mit.edu">bpaden</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roslib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>  
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_fusion_comm</build_depend>    
  <build_depend>message_generation</build_depend>
  <build_depend>ORB_SLAM2</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  
  
  <run_depend>image_transport</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_fusion_comm</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>ORB_SLAM2</run_depend>
  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>